// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataTable renders correctly if an empty array is input as data 1`] = `
<div
  className="react-bootstrap-table"
>
  <table
    className="table table-bordered"
    id={undefined}
  >
    <thead>
      <tr
        className={undefined}
      >
        <th>
          Number
        </th>
        <th>
          Name
        </th>
      </tr>
    </thead>
  </table>
</div>
`;

exports[`DataTable renders correctly with the selectRow prop 1`] = `
<div
  className="react-bootstrap-table"
>
  <table
    className="table table-bordered"
    id={undefined}
  >
    <thead>
      <tr
        className={undefined}
      >
        <th>
          Number
        </th>
        <th>
          Name
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className=""
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "green",
          }
        }
      >
        <td>
          1
        </td>
        <td
          onClick={[Function]}
        >
          q1
        </td>
      </tr>
      <tr
        className={null}
        onClick={[Function]}
        style={Object {}}
      >
        <td>
          2
        </td>
        <td
          onClick={[Function]}
        >
          q2
        </td>
      </tr>
      <tr
        className={null}
        onClick={[Function]}
        style={Object {}}
      >
        <td>
          3
        </td>
        <td
          onClick={[Function]}
        >
          q3
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`DataTable renders correctly with the selectRow prop 1`] = `
<div
  className="react-bootstrap-table"
>
  <table
    className="table table-bordered"
    id={undefined}
  >
    <thead>
      <tr
        className={undefined}
      >
        <th>
          Number
        </th>
        <th>
          Name
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className=""
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "green",
          }
        }
      >
        <td
          onClick={[Function]}
        >
          1
        </td>
        <td
          onClick={[Function]}
        >
          q1
        </td>
      </tr>
      <tr
        className={null}
        onClick={[Function]}
        style={Object {}}
      >
        <td
          onClick={[Function]}
        >
          2
        </td>
        <td
          onClick={[Function]}
        >
          q2
        </td>
      </tr>
      <tr
        className={null}
        onClick={[Function]}
        style={Object {}}
      >
        <td
          onClick={[Function]}
        >
          3
        </td>
        <td
          onClick={[Function]}
        >
          q3
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
